--- a/src/pages/MovieGrid.css
+++ b/src/pages/MovieGrid.css
@@ -50,8 +50,9 @@
     color: #000;
     padding: 1rem 0.5rem;
     align-items: center;
-
     transition: .4s;
+    text-align: center;
+    font-weight: bold;
 }
 
 .movies-container div a:hover {
